# event-system

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  filebeat.yml  pyproject.toml
.github/workflows/: pr.yml
events_core/: manage.py
events_core/event/: admin.py  apps.py  urls.py  views.py
events_core/event/management/commands/: EventDummy.py
events_core/event/migrations/: 0001_initial.py
events_core/event/models/: event.py  socials.py
events_core/event/templates/event/: event_detail.html
events_core/frontend/: .rtlcssrc  package-lock.json  package.json  tailwind.config.js  webpack.config.js
events_core/frontend/src/css/: style.css
events_core/frontend/templates/: 404.html  about.html  activity.html  base.html  blog.html  careers.html  case-studies.html  collection.html  collections-wide-sidebar.html  collections.html  contact.html  create.html  edit-profile.html  help-center.html  home-10.html  home-11.html  home-12.html  home-13.html  home-2.html  home-3.html  home-4.html  home-5.html  home-6.html  home-7.html  home-8.html  home-9.html  index-rtl.html  index.html  item.html  landing.html  login.html  maintenance.html  newsletter.html  partners.html  platform-status.html  rankings.html  single-case-study.html  single-post.html  tos.html  user.html  (+1 more)
events_core/general/utils/: choices.py
events_core/project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
events_core/project/settings/: __init__.py  common.py
events_core/user_profile/: admin.py  apps.py  urls.py  views.py
events_core/user_profile/migrations/: 0001_initial.py
events_core/user_profile/models/: __init__.py  profile.py  socials.py
nginx/: nginx.conf
sh/: initial.dev.sh  reset.sh
(+14 files in other folders)
