[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andreas Papaconstantinou <andreas.3@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
