[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andreas Papaconstantinou <andreas.3@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
redis = "^5.0.1"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-split-settings = "^1.2.0"
django-debug-toolbar = "^4.2.0"
pre-commit = "^3.6.0"
faker = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
